Update requirements.txt + Bugfix for Views.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,8 @@ asgiref==3.3.1
 Django==3.1.4
 pytz==2020.4
 sqlparse==0.4.1
-youtube-dl==2020.12.5
+youtube-dl==2020.12.14
+cffi==1.14.4
+cryptography==3.3.1
+pycparser==2.20
+six==1.15.0
