--- a/06 - SoundCore/soundcore/Caddyfile
+++ b/06 - SoundCore/soundcore/Caddyfile
@@ -1,7 +1,7 @@
 zarif-ahnaf.duckdns.org {
-    handle_path /media/* {
+    handle_path /static/* {
         file_server browse {
-            root C:/Programming/soundcore/media
+            root C:/Programming/soundcore/staticfiles
         }
     }
     handle_path /* {
