--- a/06 - SoundCore/soundcore/Caddyfile
+++ b/06 - SoundCore/soundcore/Caddyfile
@@ -4,6 +4,11 @@ zarif-ahnaf.duckdns.org {
             root C:/Programming/soundcore/staticfiles
         }
     }
+    handle_path /media/* {
+        file_server {
+            root C:/Programming/soundcore/media
+        }
+    }
     handle_path /* {
         reverse_proxy localhost:8000
     }
