--- a/06 - SoundCore/soundcore/Pipfile
+++ b/06 - SoundCore/soundcore/Pipfile
@@ -6,11 +6,11 @@ name = "pypi"
 [packages]
 django = "*"
 mutagen = "*"
-pillow = "*"
 asgiref = "*"
+sorl-thumbnail = "*"
 
 [dev-packages]
 black = "==21.5b2"
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
