--- a/06 - SoundCore/soundcore/Pipfile
+++ b/06 - SoundCore/soundcore/Pipfile
@@ -4,13 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+pillow = "*"
 django = "*"
 mutagen = "*"
 asgiref = "*"
 sorl-thumbnail = "*"
+uvicorn = { extras = ["standard"], version = "*" }
+whitenoise = {extras = ["brotli"], version = "*"}
+psycopg2 = "*"
 
 [dev-packages]
 black = "==21.5b2"
 
 [requires]
-python_version = "3.10"
+python_version = "3.9"
